add dispensers, droppers, redstone comparators, quartz and cobwebs